# atcoder-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs  revel_deserialize.rs
tests/: api.rs
tests/submit_data/: practice_a.rs
